fix alignment of menu button

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
 .menubutton {
     display: none;
     position: absolute;
-    right: 10%;
+    right: 5.5%;
     transform: scale(1.5);
     top: 22px;
 }
